--- a/src/main/resources/templates/jefe_ventas_home.html
+++ b/src/main/resources/templates/jefe_ventas_home.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
+	<meta charset="UTF-8">
     <title>Panel Jefe de Ventas</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+	    <a class="navbar-brand" href="/inicio">ViajaFácil</a>
+
+	    <ul class="navbar-nav me-auto">
+	        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+	            <a class="nav-link" href="/jefe-ventas">Panel Ventas</a>
+	        </li>
+	    </ul>
+
+	    <ul class="navbar-nav ms-auto">
+	        <li class="nav-item" sec:authorize="!isAuthenticated()">
+	            <a class="nav-link" href="/login">Iniciar Sesión</a>
+	        </li>
+	        <li class="nav-item" sec:authorize="!isAuthenticated()">
+	            <a class="nav-link" href="/register">Registrarse</a>
+	        </li>
+
+	        <li class="nav-item" sec:authorize="isAuthenticated()">
+	            <span class="navbar-text me-2">Hola, <span sec:authentication="name"></span></span>
+	        </li>
+	        <li class="nav-item" sec:authorize="isAuthenticated()">
+	            <form th:action="@{/logout}" method="post" class="d-inline">
+	                <button type="submit" class="btn btn-outline-danger btn-sm">Cerrar sesión</button>
+	            </form>
+	        </li>
+	    </ul>
+	</nav>
+
     <h1>Bienvenido al Panel del Jefe de Ventas</h1>
     <nav>
         <ul>
