--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,29 +1,60 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
+	<meta charset="UTF-8" />
     <title>Login</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
-<h2>Iniciar Sesión</h2>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+	    <a class="navbar-brand" href="/inicio">ViajaFácil</a>
 
-<form th:action="@{/login}" method="post">
-    <label>Email:</label>
-    <input type="email" name="username" required />
-    <br/>
+	    <ul class="navbar-nav me-auto">
+	        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+	            <a class="nav-link" href="/jefe-ventas">Panel Ventas</a>
+	        </li>
+	    </ul>
 
-    <label>Contraseña:</label>
-    <input type="password" name="password" required />
-    <br/>
+	    <ul class="navbar-nav ms-auto">
+	        <li class="nav-item" sec:authorize="!isAuthenticated()">
+	            <a class="nav-link" href="/login">Iniciar Sesión</a>
+	        </li>
+	        <li class="nav-item" sec:authorize="!isAuthenticated()">
+	            <a class="nav-link" href="/register">Registrarse</a>
+	        </li>
 
-    <button type="submit">Ingresar</button>
-</form>
+	        <li class="nav-item" sec:authorize="isAuthenticated()">
+	            <span class="navbar-text me-2">Hola, <span sec:authentication="name"></span></span>
+	        </li>
+	        <li class="nav-item" sec:authorize="isAuthenticated()">
+	            <form th:action="@{/logout}" method="post" class="d-inline">
+	                <button type="submit" class="btn btn-outline-danger btn-sm">Cerrar sesión</button>
+	            </form>
+	        </li>
+	    </ul>
+	</nav>
 
-<div th:if="${param.error}">
-    <p style="color:red;">Email o contraseña incorrectos.</p>
-</div>
-
-<div th:if="${param.logout}">
-    <p style="color:green;">Has cerrado sesión con éxito.</p>
-</div>
+	<h2>Iniciar Sesión</h2>
+	
+	<form th:action="@{/login}" method="post">
+	    <label>Email:</label>
+	    <input type="email" name="username" required />
+	    <br/>
+	
+	    <label>Contraseña:</label>
+	    <input type="password" name="password" required />
+	    <br/>
+	
+	    <button type="submit">Ingresar</button>
+	</form>
+	
+	<div th:if="${param.error}">
+	    <p style="color:red;">Email o contraseña incorrectos.</p>
+	</div>
+	
+	<div th:if="${param.logout}">
+	    <p style="color:green;">Has cerrado sesión con éxito.</p>
+	</div>
 </body>
 </html>
