--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,34 +1,64 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+	<meta charset="UTF-8" />
     <title>Registro</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
-<h2>Formulario de Registro</h2>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
+	    <a class="navbar-brand" href="/inicio">ViajaFácil</a>
 
-<form th:action="@{/register/save}" th:object="${user}" method="post">
-    <label>Nombre:</label>
-    <input type="text" th:field="*{firstName}" required />
-    <br/>
+	    <ul class="navbar-nav me-auto">
+	        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
+	            <a class="nav-link" href="/jefe-ventas">Panel Ventas</a>
+	        </li>
+	    </ul>
 
-    <label>Apellido:</label>
-    <input type="text" th:field="*{lastName}" required />
-    <br/>
+	    <ul class="navbar-nav ms-auto">
+	        <li class="nav-item" sec:authorize="!isAuthenticated()">
+	            <a class="nav-link" href="/login">Iniciar Sesión</a>
+	        </li>
+	        <li class="nav-item" sec:authorize="!isAuthenticated()">
+	            <a class="nav-link" href="/register">Registrarse</a>
+	        </li>
 
-    <label>Email:</label>
-    <input type="email" th:field="*{email}" required />
-    <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-    <br/>
+	        <li class="nav-item" sec:authorize="isAuthenticated()">
+	            <span class="navbar-text me-2">Hola, <span sec:authentication="name"></span></span>
+	        </li>
+	        <li class="nav-item" sec:authorize="isAuthenticated()">
+	            <form th:action="@{/logout}" method="post" class="d-inline">
+	                <button type="submit" class="btn btn-outline-danger btn-sm">Cerrar sesión</button>
+	            </form>
+	        </li>
+	    </ul>
+	</nav>
 
-    <label>Contraseña:</label>
-    <input type="password" th:field="*{password}" required />
-    <br/>
-
-    <button type="submit">Registrarse</button>
-</form>
-
-<div th:if="${param.success}">
-    <p style="color:green;">¡Usuario registrado con éxito!</p>
-</div>
+	<h2>Formulario de Registro</h2>
+	
+	<form th:action="@{/register/save}" th:object="${user}" method="post">
+	    <label>Nombre:</label>
+	    <input type="text" th:field="*{firstName}" required />
+	    <br/>
+	
+	    <label>Apellido:</label>
+	    <input type="text" th:field="*{lastName}" required />
+	    <br/>
+	
+	    <label>Email:</label>
+	    <input type="email" th:field="*{email}" required />
+	    <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
+	    <br/>
+	
+	    <label>Contraseña:</label>
+	    <input type="password" th:field="*{password}" required />
+	    <br/>
+	
+	    <button type="submit">Registrarse</button>
+	</form>
+	
+	<div th:if="${param.success}">
+	    <p style="color:green;">¡Usuario registrado con éxito!</p>
+	</div>
 </body>
 </html>
