--- a/src/main/resources/templates/editar_paquete.html
+++ b/src/main/resources/templates/editar_paquete.html
@@ -45,19 +45,7 @@
         <input type="text" th:field="*{destination}" required/><br/>
 
         <label>Pasajeros:</label>
-        <input type="number" th:field="*{passengers}" min="1" required/><br/>
-
-        <label>Fecha Inicio:</label>
-        <input type="date" th:field="*{start_date}" required/><br/>
-
-        <label>Fecha Fin:</label>
-        <input type="date" th:field="*{end_date}" required/><br/>
-
-        <label>Transporte:</label>
-        <input type="text" th:field="*{transport}" required/><br/>
-
-        <label>Descripción:</label>
-        <textarea th:field="*{description}" required></textarea><br/>
+        <input type="number" th:field="*{passangers}" min="1" required/><br/>
 
         <label>Precio:</label>
         <input type="number" step="0.01" th:field="*{price}" min="0" required/><br/>
