--- a/src/main/resources/templates/buscar_paquete.html
+++ b/src/main/resources/templates/buscar_paquete.html
@@ -50,17 +50,27 @@
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Destino</th>
+				<th>Cantidad de pasajeros</th>
+				<th>Destino</th>
+                <th>Lugar de Salida</th>
+				<th>Fecha de Inicio</th>
+				<th>Fecha de Fin</th>
+				<th>Metodo de transporte</th>
+				<th>Descripcion</th>
                 <th>Precio</th>
-                <th>Cantidad de pasajeros</th>
             </tr>
         </thead>
         <tbody>
             <tr th:each="paquete : ${paquetes}">
                 <td th:text="${paquete.id}">ID</td>
+				<td th:text="${paquete.passangers}">Pasajeros</td>
                 <td th:text="${paquete.destination}">Destino</td>
+				<td th:text="${paquete.departure_place}">Lugar de Salida</td>
+				<td th:text="${paquete.start_date}">Fecha de Inicio</td>
+				<td th:text="${paquete.end_date}">Fecha de Fin</td>
+				<td th:text="${paquete.transport}">Metodo de Transporte</td>
+				<td th:text="${paquete.description}">Descripcion</td>
                 <td th:text="${paquete.price}">Precio</td>
-                <td th:text="${paquete.passangers}">Pasajeros</td>
                 <td>
                     <a th:href="@{/jefe-ventas/paquetes/editar/{id}(id=${paquete.id})}" class="btn btn-sm btn-primary">Modificar</a>
                     <a th:href="@{/jefe-ventas/paquetes/eliminar/{id}(id=${paquete.id})}" class="btn btn-sm btn-danger">Eliminar</a>
