--- a/src/main/resources/templates/editar_paquete.html
+++ b/src/main/resources/templates/editar_paquete.html
@@ -41,15 +41,31 @@
 	    
 	    <input type="hidden" name="_method" value="put" />
 
+		<label>Pasajeros:</label>
+		<input type="number" th:field="*{passangers}" min="1" required/><br/>
+		
         <label>Destino:</label>
         <input type="text" th:field="*{destination}" required/><br/>
 
-        <label>Pasajeros:</label>
-        <input type="number" th:field="*{passangers}" min="1" required/><br/>
-
+		<label>Lugar de Salida:</label>
+		<input type="text" th:field="*{departure_place}" required/><br/>
+		
+		<label>Fecha de Inicio:</label>
+		<input type="text" th:field="*{start_date}" required/><br/>
+		
+		<label>Fecha de Fin:</label>
+		<input type="text" th:field="*{end_date}" required/><br/>
+		
+		<label>Metodo de Transporte:</label>
+		<input type="text" th:field="*{transport}" required/><br/>
+		
+		<label>Descripcion:</label>
+		<input type="text" th:field="*{description}" required/><br/>
+		
         <label>Precio:</label>
         <input type="number" step="0.01" th:field="*{price}" min="0" required/><br/>
-
+	
+		
         <button type="submit">Actualizar</button>
     </form>
 
