--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,11 @@
 	            <a class="nav-link" href="/jefe-ventas">Panel Ventas</a>
 	        </li>
 	    </ul>
-	
+		<ul class="navbar-nav me-auto">
+			<li class="nav-item" sec:authorize="isAuthenticated()">
+			    <a class="nav-link" href="/productos">Lista Productos</a>
+			</li>
+		</ul>
 	    <ul class="navbar-nav ms-auto">
 	        <li class="nav-item" sec:authorize="!isAuthenticated()">
 	            <a class="nav-link" href="/login">Iniciar Sesión</a>
@@ -23,7 +27,6 @@
 	        <li class="nav-item" sec:authorize="!isAuthenticated()">
 	            <a class="nav-link" href="/register">Registrarse</a>
 	        </li>
-	
 			<li class="nav-item" sec:authorize="isAuthenticated()">
 			    <a class="nav-link btn btn-primary text-black ms-2" href="/carrito/mostrar">Carrito</a>
 			</li>
@@ -40,46 +43,44 @@
 	    </ul>
 	</nav>
 
-    <h1>Bienvenido a ViajaFácil</h1>
-    <p>Tu agencia de viajes online de confianza.</p>
+	<h1>Bienvenido a ViajaFácil</h1>
+		<p>Tu agencia de viajes online de confianza.</p>
 
-    <h2 class="mt-5 mb-4">Paquetes disponibles</h2>
-	
-	<form method="get" th:action="@{/inicio}" class="mb-3">
-		<input type="number" name="id" placeholder="Buscar por ID" class="form-control mb-2" th:value="${param.id}" />
-	    <button type="submit" class="btn btn-primary me-2">Buscar</button>
-	    <a href="/inicio" class="btn btn-secondary me-2">Mostrar todos</a>
-	</form>
+		<h2 class="mt-5 mb-4">Paquetes disponibles</h2>
+		<div class="row">
+		    <div class="col-md-4 mb-4" th:each="paquete : ${paquetes}">
+		        <div class="card h-100 shadow rounded">
+		            <img th:src="@{'https://placehold.co/600x400'}" class="card-img-top" alt="Imagen del paquete">
 
-    <div th:if="${error}" class="alert alert-danger" th:text="${error}"></div>
+		            <div class="card-body">
+		                <h5 class="card-title text-primary fw-bold" th:text="${paquete.destination}">Destino</h5>
 
-    <table class="table table-striped" id="tablaPaquetes">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Destino</th>
-                <th>Precio</th>
-                <th>Cantidad de pasajeros</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="paquete : ${paquetes}">
-                <td th:text="${paquete.id}">ID</td>
-                <td th:text="${paquete.destination}">Destino</td>
-                <td th:text="${paquete.price}">Precio</td>
-                <td th:text="${paquete.passangers}">Pasajeros</td>
-				<td>
-				    <form th:action="@{/carrito/agregar}" method="post" style="margin:0;">
-				        <input type="hidden" name="idTourPackage" th:value="${paquete.id}" />
-				        <button type="submit" class="btn btn-sm btn-primary">Agregar al carrito</button>
-				    </form>
-				</td>
-            </tr>
-            <tr th:if="${#lists.isEmpty(paquetes)}">
-                <td colspan="4" class="text-center">No hay paquetes para mostrar</td>
-            </tr>
-        </tbody>
-    </table>
+		                <p class="card-text mb-1">
+		                    <strong>Descripción:</strong> <span th:text="${paquete.description}"></span>
+		                </p>
+						<p class="card-text mb-1">
+							<strong>Luegar de Salida:</strong> <span th:text="${paquete.departure_place}"></span>
+						</p>
+		                <p class="card-text mb-1">
+		                    <strong>Fechas:</strong> 
+		                    <span th:text="${paquete.start_date}"></span> - 
+		                    <span th:text="${paquete.end_date}"></span>
+		                </p>
+		                <p class="card-text mb-1">
+		                    <strong>Transporte:</strong> <span th:text="${paquete.transport}"></span>
+		                </p>
+		                <p class="card-text mb-1">
+		                    <strong>Pasajeros:</strong> <span th:text="${paquete.passangers}"></span>
+		                </p>
+		                <p class="card-text mb-2">
+		                    <strong>Precio:</strong> $<span th:text="${paquete.price}"></span>
+		                </p>
+
+		                <a th:href="@{'/paquete/' + ${paquete.id}}" class="btn btn-outline-primary w-100">Ver detalles</a>
+		            </div>
+		        </div>
+		    </div>
+		</div>	
 
 </body>
 </html>
