--- a/src/main/resources/templates/buscar_paquete.html
+++ b/src/main/resources/templates/buscar_paquete.html
@@ -7,33 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body class="container mt-4">
-	<nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
-	    <a class="navbar-brand" href="/inicio">ViajaFácil</a>
-
-	    <ul class="navbar-nav me-auto">
-	        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-	            <a class="nav-link" href="/jefe-ventas">Panel Ventas</a>
-	        </li>
-	    </ul>
-
-	    <ul class="navbar-nav ms-auto">
-	        <li class="nav-item" sec:authorize="!isAuthenticated()">
-	            <a class="nav-link" href="/login">Iniciar Sesión</a>
-	        </li>
-	        <li class="nav-item" sec:authorize="!isAuthenticated()">
-	            <a class="nav-link" href="/register">Registrarse</a>
-	        </li>
-
-	        <li class="nav-item" sec:authorize="isAuthenticated()">
-	            <span class="navbar-text me-2">Hola, <span sec:authentication="name"></span></span>
-	        </li>
-	        <li class="nav-item" sec:authorize="isAuthenticated()">
-	            <form th:action="@{/logout}" method="post" class="d-inline">
-	                <button type="submit" class="btn btn-outline-danger btn-sm">Cerrar sesión</button>
-	            </form>
-	        </li>
-	    </ul>
-	</nav>
+	
+	<!--Menu-->
+	<div th:replace="complementos/navbar :: navbar"></div>
+	
     <h2>Listado de Paquetes</h2>
 
     <form method="get" th:action="@{/jefe-ventas/paquetes/buscar}" class="mb-3">
@@ -73,7 +50,10 @@
                 <td th:text="${paquete.price}">Precio</td>
                 <td>
                     <a th:href="@{/jefe-ventas/paquetes/editar/{id}(id=${paquete.id})}" class="btn btn-sm btn-primary">Modificar</a>
-                    <a th:href="@{/jefe-ventas/paquetes/eliminar/{id}(id=${paquete.id})}" class="btn btn-sm btn-danger">Eliminar</a>
+					<form th:action="@{/jefe-ventas/paquetes/eliminar/{id}(id=${paquete.id})}" method="post" onsubmit="return confirm('¿Eliminar este paquete del carrito?')">
+					    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+					    <button type="submit" class="btn btn-sm btn-danger">Eliminar</button>
+					</form>
                 </td>
             </tr>
             <tr th:if="${#lists.isEmpty(paquetes)}">
