--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,43 +5,9 @@
     <title>Inicio - ViajaFácil</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
-<body class="container py-4">
-	<nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
-	    <a class="navbar-brand" href="/inicio">ViajaFácil</a>
-	
-	    <ul class="navbar-nav me-auto">
-	        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-	            <a class="nav-link" href="/jefe-ventas">Panel Ventas</a>
-	        </li>
-	    </ul>
-		<ul class="navbar-nav me-auto">
-			<li class="nav-item" sec:authorize="isAuthenticated()">
-			    <a class="nav-link" href="/productos">Lista Productos</a>
-			</li>
-		</ul>
-	    <ul class="navbar-nav ms-auto">
-	        <li class="nav-item" sec:authorize="!isAuthenticated()">
-	            <a class="nav-link" href="/login">Iniciar Sesión</a>
-	        </li>
-			
-	        <li class="nav-item" sec:authorize="!isAuthenticated()">
-	            <a class="nav-link" href="/register">Registrarse</a>
-	        </li>
-			<li class="nav-item" sec:authorize="isAuthenticated()">
-			    <a class="nav-link btn btn-primary text-black ms-2" href="/carrito/mostrar">Carrito</a>
-			</li>
-			
-	        <li class="nav-item" sec:authorize="isAuthenticated()">
-	            <span class="navbar-text me-2">Hola, <span sec:authentication="name"></span></span>
-	        </li>
-	
-	        <li class="nav-item" sec:authorize="isAuthenticated()">
-	            <form th:action="@{/logout}" method="post" class="d-inline">
-	                <button type="submit" class="btn btn-outline-danger btn-sm">Cerrar sesión</button>
-	            </form>
-	        </li>
-	    </ul>
-	</nav>
+<body class="container mt-4">
+
+	<div th:replace="complementos/navbar :: navbar"></div>
 
 	<h1>Bienvenido a ViajaFácil</h1>
 		<p>Tu agencia de viajes online de confianza.</p>
@@ -77,6 +43,10 @@
 		                </p>
 
 		                <a th:href="@{'/paquete/' + ${paquete.id}}" class="btn btn-outline-primary w-100">Ver detalles</a>
+						<form th:action="@{/carrito/agregar}" method="post">
+						    <input type="hidden" name="idTourPackage" th:value="${paquete.id}" />
+							<button type="submit" class="btn btn-outline-primary w-100">Agregar al carrito</button>
+						</form>
 		            </div>
 		        </div>
 		    </div>
