--- a/src/main/resources/templates/nuevo_paquete.html
+++ b/src/main/resources/templates/nuevo_paquete.html
@@ -6,44 +6,10 @@
     <title>Crear Nuevo Paquete</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
-<body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light px-3" 
-	     xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-	    <a class="navbar-brand" href="/">ViajaFácil</a>
+<body class="container mt-4">
 
-	    <ul class="navbar-nav me-auto">
-	        <li class="nav-item" sec:authorize="hasRole('USER')">
-	            <a class="nav-link" href="/jefe-ventas/paquetes/buscar">Buscar Paquetes</a>
-	        </li>
-	        <li class="nav-item" sec:authorize="hasRole('USER')">
-	            <a class="nav-link" href="/jefe-ventas/paquetes/nuevo">Crear Paquete</a>
-	        </li>
-
-	        <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-	            <a class="nav-link" href="/admin/dashboard">Panel Admin</a>
-	        </li>
-	    </ul>
-
-	    <ul class="navbar-nav ms-auto">
-	        <li class="nav-item" sec:authorize="!isAuthenticated()">
-	            <a class="nav-link" href="/login">Iniciar sesión</a>
-	        </li>
-	        <li class="nav-item" sec:authorize="!isAuthenticated()">
-	            <a class="nav-link" href="/register">Registrarse</a>
-	        </li>
-
-	        <li class="nav-item" sec:authorize="isAuthenticated()">
-	            <span class="navbar-text me-2">
-	                Hola, <span sec:authentication="name"></span>
-	            </span>
-	        </li>
-	        <li class="nav-item" sec:authorize="isAuthenticated()">
-	            <form th:action="@{/logout}" method="post" class="d-inline">
-	                <button type="submit" class="btn btn-outline-danger btn-sm">Cerrar sesión</button>
-	            </form>
-	        </li>
-	    </ul>
-	</nav>
+	<div th:replace="complementos/navbar :: navbar"></div>
+	
     <h1>Crear Nuevo Paquete</h1>
 
     <form th:action="@{/jefe-ventas/paquetes/nuevo}" th:object="${paquete}" method="post">
