--- a/src/main/resources/templates/nuevo_pago.html
+++ b/src/main/resources/templates/nuevo_pago.html
@@ -8,7 +8,7 @@
 </head>
 <body class="container mt-4">
 
-    <div th:replace="complementos/navbar :: navbar"></div>
+    <div th:replace="~{complementos/navbar :: navbar}"></div>
 
     <h1>Realizar Pago</h1>
 
