--- a/src/main/resources/templates/buscar_paquete.html
+++ b/src/main/resources/templates/buscar_paquete.html
@@ -6,10 +6,9 @@
     <title>Buscar Paquetes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
-<body class="container mt-4">
+<body>
 	
-	<!--Menu-->
-	<div th:replace="complementos/navbar :: navbar"></div>
+	<div th:replace="~{complementos/navbar :: navbar}"></div>
 	
     <h2>Listado de Paquetes</h2>
 
