--- a/src/main/resources/templates/detalle_paquete.html
+++ b/src/main/resources/templates/detalle_paquete.html
@@ -5,14 +5,14 @@
     <title th:text="'Detalles de ' + ${paquete.destination}">Detalles</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
-<body class="container mt-4">
+<body>
 
-	<div th:replace="complementos/navbar :: navbar"></div>
+	<div th:replace="~{complementos/navbar :: navbar}"></div>
 
     <a href="/inicio" class="btn btn-link mb-3">&larr; Volver al inicio</a>
 
     <div class="card shadow">
-        <img th:src="@{'https://placehold.co/600x400,' + ${paquete.destination}}" class="card-img-top" alt="Imagen del destino">
+        <img th:src="@{'https://placehold.co/600x400'}" class="card-img-top" alt="Imagen del destino">
 
         <div class="card-body">
             <h2 class="card-title text-primary" th:text="${paquete.destination}">Destino</h2>
