--- a/src/main/resources/templates/editar_paquete.html
+++ b/src/main/resources/templates/editar_paquete.html
@@ -8,7 +8,7 @@
 </head>
 <body class="container mt-4">
 
-	<div th:replace="complementos/navbar :: navbar"></div>
+	<div th:replace="~{complementos/navbar :: navbar}"></div>
 
     <h1>Editar Paquete</h1>
 
