--- a/src/main/resources/templates/lista_paquete.html
+++ b/src/main/resources/templates/lista_paquete.html
@@ -6,9 +6,9 @@
     <title>ViajaFácil - Paquetes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body class="container mt-4">
+<body>
 
-	<div th:replace="complementos/navbar :: navbar"></div>
+	<div th:replace="~{complementos/navbar :: navbar}"></div>
 
 <div class="container mt-5">
     <h2 class="mb-4">Paquetes disponibles</h2>
