--- a/src/main/resources/templates/nuevo_paquete.html
+++ b/src/main/resources/templates/nuevo_paquete.html
@@ -6,9 +6,9 @@
     <title>Crear Nuevo Paquete</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
-<body class="container mt-4">
+<body>
 
-	<div th:replace="complementos/navbar :: navbar"></div>
+	<div th:replace="~{complementos/navbar :: navbar}"></div>
 	
     <h1>Crear Nuevo Paquete</h1>
 
