--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 </head>
 <body class="bg-light">
 
-	<div th:replace="complementos/navbar :: navbar"></div>
+	<div th:replace="~{complementos/navbar :: navbar}"></div>
 
 	<div class="container d-flex justify-content-center align-items-center pt-5">
 		<div class="card p-4 shadow-sm mt-5" style="min-width: 350px; max-width: 400px; width: 100%;">
