--- a/src/main/resources/templates/ventas_jefe.html
+++ b/src/main/resources/templates/ventas_jefe.html
@@ -6,9 +6,9 @@
     <title>ViajaFácil - Ventas Jefe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
-<body class="container mt-4">
+<body>
 
-    <div th:replace="complementos/navbar :: navbar"></div>
+    <div th:replace="~{complementos/navbar :: navbar}"></div>
 
     <div class="container mt-5">
         <h2>Ventas - Jefe de Ventas</h2>
