--- a/src/main/resources/templates/ventas_usuario.html
+++ b/src/main/resources/templates/ventas_usuario.html
@@ -6,17 +6,17 @@
     <title>ViajaFácil - Mis Ventas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
-<body class="container mt-4">
+<body>
 
-    <div th:replace="complementos/navbar :: navbar"></div>
+    <div th:replace="~{complementos/navbar :: navbar}"></div>
 
     <div class="container mt-5">
-        <h2>Mis Ventas</h2>
+        <h2>Mis Compras</h2>
 
         <table class="table table-striped mt-3">
             <thead>
                 <tr>
-                    <th>ID Venta</th>
+                    <th>ID Compra</th>
                     <th>Pago ID</th>
                     <th>Detalle</th>
                     <th>Total Items</th>
